# seaORM-tutorial

./: Cargo.toml  LICENSE  README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_bakery_table.rs  m20220101_000002_create_chef_table.rs
src/: main.rs
src/entities/: bakery.rs  chef.rs  mod.rs  prelude.rs
