[package]
name = "sea-orm-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration"]

[dependencies]
futures = "0.3.21"
sea-orm = { version = "0.11.0", features = ["macros", "sqlx-mysql", "runtime-async-std-native-tls"] }
dotenv_codegen = "0.15.0"